--- a/psycstudio/src/app/app.component.html
+++ b/psycstudio/src/app/app.component.html
@@ -47,5 +47,10 @@
     </div>
   </nav>
   <!--end navbar-->
-  
+
+
+  <!--CONTENT-->
+  <login></login>
+  <user-register></user-register>
+  <therapist-register></therapist-register>
 </div>
