--- a/psycstudio/src/app/app.component.html
+++ b/psycstudio/src/app/app.component.html
@@ -50,7 +50,5 @@
 
 
   <!--CONTENT-->
-  <login></login>
-  <user-register></user-register>
-  <therapist-register></therapist-register>
+  <router-outlet></router-outlet>
 </div>
